--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.2.0",
     "unplugin-auto-import": "^0.17.1",
+    "unplugin-icons": "^0.17.4",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11",
     "vitest": "^0.34.6",
