--- a/package.json
+++ b/package.json
@@ -14,13 +14,7 @@
     "element-plus": "^2.4.3",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5",
-    "typescript": "~5.2.0",
-    "unplugin-auto-import": "^0.17.1",
-    "unplugin-icons": "^0.17.4",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.11",
-    "vitest": "^0.34.6"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
