--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "school-fish-web",
+  "name": "sjk-web",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "element-plus": "^2.4.3",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
